Fixing color-black variable and spacing

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -180,5 +180,5 @@ body{
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: $color-black;
+  background-color: $colorGrayscale-black;
 }
